--- a/style.css
+++ b/style.css
@@ -91,12 +91,12 @@ address {
   font-style: normal;
   align-items: center;
 }
-footer .attribution {
+div .attribution {
   font-size: 11px;
   text-align: center;
 }
 
-footer .attribution a {
+div .attribution a {
   color: hsl(228, 45%, 44%);
 }
 
